--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,29 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Cesarwebsite</title>
-  <base href="/">
-
+  <title>César Pires - Advogado</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="UTF-8">
+  <meta http-equiv="title" CONTENT="César Pires - Advogado">
+  <meta name="description" content="César Pires é Licenciado e Mestre em Direito, pós-graduado em Direito Bancário, da Bolsa e Seguros e actualmente encontra-se a exercer na Póvoa de Varzim.">
+  <meta name="keywords" content="César Pires - Advogado, advogado, césar, pires, advocacia, contencioso, direito da família, direito das sucessões, direito comercial, direito da União Europeia, Direito das Sociedades, direito dos contratos, direito bancário, direito dos seguros, direito do consumidor, direito do consumidor, Povoa de Varzim, Portugal">
+  <link rel="shortcut icon" href="/images/icon.png">
+  <meta name="geo.region" content="PT-13" />
+  <meta name="geo.placename" content="Povoa de Varzim" />
+  <meta name="geo.position" content="41.381856;-8.76329" />
+  <meta name="ICBM" content="41.381856, -8.76329" />
+  <meta property="fb:app_id" content="250479071724249" />
+
+  <!-- <link rel="stylesheet" href="styles/bootstrap.min.css" />
+  <link rel="stylesheet" href="styles/font-awesome.min.css"> -->
+  <base href="/">
 </head>
-<body>
+
+<body class="">
   <app-root></app-root>
 </body>
+<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDp0EIS0Z6IGegKlgGcn6hiucSYyUZOakE&sensor=false&language=pt"></script>
+
 </html>
