--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,15 @@
 
 <body class="">
   <app-root></app-root>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-45979625-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-45979625-1');
+</script>
 </body>
 
 </html>
