Implement new version of angular

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="pt">
 <head>
   <meta charset="utf-8">
   <title>César Pires - Advogado</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="UTF-8">
   <meta http-equiv="title" CONTENT="César Pires - Advogado">
   <meta name="description" content="César Pires é Licenciado e Mestre em Direito, pós-graduado em Direito Bancário, da Bolsa e Seguros e actualmente encontra-se a exercer na Póvoa de Varzim.">
   <meta name="keywords" content="César Pires - Advogado, advogado, césar, pires, advocacia, contencioso, direito da família, direito das sucessões, direito comercial, direito da União Europeia, Direito das Sociedades, direito dos contratos, direito bancário, direito dos seguros, direito do consumidor, direito do consumidor, Povoa de Varzim, Portugal">
@@ -15,22 +13,17 @@
   <meta name="geo.position" content="41.381856;-8.76329" />
   <meta name="ICBM" content="41.381856, -8.76329" />
   <meta property="fb:app_id" content="250479071724249" />
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA_IocgQStD3L9Z3lt-TNbYgg-UwaCj9BE&sensor=false&language=pt"></script>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
   <base href="/">
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC7tzwW-N9vvDO5Jbyxnkb2W-not5E8WJI&sensor=false&language=pt"></script>
-
 </head>
-
-<body class="">
+<body>
   <app-root></app-root>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-45979625-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45979625-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
-  gtag('config', 'UA-45979625-1');
 </script>
 </body>
-
 </html>
